--- a/src/main/resources/cc/chungkwong/mathocr/common/format/latex_symbol_math.properties
+++ b/src/main/resources/cc/chungkwong/mathocr/common/format/latex_symbol_math.properties
@@ -441,3 +441,211 @@ FB03=ffi
 FB04=ffl
 FB05=ft
 FB06=st
+1d49c=\\mathscr{A}
+1d49d=\\mathscr{B}
+1d49e=\\mathscr{C}
+1d49f=\\mathscr{D}
+1d4a0=\\mathscr{E}
+1d4a1=\\mathscr{F}
+1d4a2=\\mathscr{G}
+1d4a3=\\mathscr{H}
+1d4a4=\\mathscr{I}
+1d4a5=\\mathscr{J}
+1d4a6=\\mathscr{K}
+1d4a7=\\mathscr{L}
+1d4a8=\\mathscr{M}
+1d4a9=\\mathscr{N}
+1d4aa=\\mathscr{O}
+1d4ab=\\mathscr{P}
+1d4ac=\\mathscr{Q}
+1d4ad=\\mathscr{R}
+1d4ae=\\mathscr{S}
+1d4af=\\mathscr{T}
+1d4b0=\\mathscr{U}
+1d4b1=\\mathscr{V}
+1d4b2=\\mathscr{W}
+1d4b3=\\mathscr{X}
+1d4b4=\\mathscr{Y}
+1d4b5=\\mathscr{Z}
+1d4b6=\\mathscr{a}
+1d4b7=\\mathscr{b}
+1d4b8=\\mathscr{c}
+1d4b9=\\mathscr{d}
+1d4ba=\\mathscr{e}
+1d4bb=\\mathscr{f}
+1d4bc=\\mathscr{g}
+1d4bd=\\mathscr{h}
+1d4be=\\mathscr{i}
+1d4bf=\\mathscr{j}
+1d4c0=\\mathscr{k}
+1d4c1=\\mathscr{l}
+1d4c2=\\mathscr{m}
+1d4c3=\\mathscr{n}
+1d4c4=\\mathscr{o}
+1d4c5=\\mathscr{p}
+1d4c6=\\mathscr{q}
+1d4c7=\\mathscr{r}
+1d4c8=\\mathscr{s}
+1d4c9=\\mathscr{t}
+1d4ca=\\mathscr{u}
+1d4cb=\\mathscr{v}
+1d4cc=\\mathscr{w}
+1d4cd=\\mathscr{x}
+1d4ce=\\mathscr{y}
+1d4cf=\\mathscr{z}
+1d4d0=\\mathcal{A}
+1d4d1=\\mathcal{B}
+1d4d2=\\mathcal{C}
+1d4d3=\\mathcal{D}
+1d4d4=\\mathcal{E}
+1d4d5=\\mathcal{F}
+1d4d6=\\mathcal{G}
+1d4d7=\\mathcal{H}
+1d4d8=\\mathcal{I}
+1d4d9=\\mathcal{J}
+1d4da=\\mathcal{K}
+1d4db=\\mathcal{L}
+1d4dc=\\mathcal{M}
+1d4dd=\\mathcal{N}
+1d4de=\\mathcal{O}
+1d4df=\\mathcal{P}
+1d4e0=\\mathcal{Q}
+1d4e1=\\mathcal{R}
+1d4e2=\\mathcal{S}
+1d4e3=\\mathcal{T}
+1d4e4=\\mathcal{U}
+1d4e5=\\mathcal{V}
+1d4e6=\\mathcal{W}
+1d4e7=\\mathcal{X}
+1d4e8=\\mathcal{Y}
+1d4e9=\\mathcal{Z}
+1d4ea=\\mathcal{a}
+1d4eb=\\mathcal{b}
+1d4ec=\\mathcal{c}
+1d4ed=\\mathcal{d}
+1d4ee=\\mathcal{e}
+1d4ef=\\mathcal{f}
+1d4f0=\\mathcal{g}
+1d4f1=\\mathcal{h}
+1d4f2=\\mathcal{i}
+1d4f3=\\mathcal{j}
+1d4f4=\\mathcal{k}
+1d4f5=\\mathcal{l}
+1d4f6=\\mathcal{m}
+1d4f7=\\mathcal{n}
+1d4f8=\\mathcal{o}
+1d4f9=\\mathcal{p}
+1d4fa=\\mathcal{q}
+1d4fb=\\mathcal{r}
+1d4fc=\\mathcal{s}
+1d4fd=\\mathcal{t}
+1d4fe=\\mathcal{u}
+1d4ff=\\mathcal{v}
+1d500=\\mathcal{w}
+1d501=\\mathcal{x}
+1d502=\\mathcal{y}
+1d503=\\mathcal{z}
+1d504=\\mathfrak{A}
+1d505=\\mathfrak{B}
+1d506=\\mathfrak{C}
+1d507=\\mathfrak{D}
+1d508=\\mathfrak{E}
+1d509=\\mathfrak{F}
+1d50a=\\mathfrak{G}
+1d50b=\\mathfrak{H}
+1d50c=\\mathfrak{I}
+1d50d=\\mathfrak{J}
+1d50e=\\mathfrak{K}
+1d50f=\\mathfrak{L}
+1d510=\\mathfrak{M}
+1d511=\\mathfrak{N}
+1d512=\\mathfrak{O}
+1d513=\\mathfrak{P}
+1d514=\\mathfrak{Q}
+1d515=\\mathfrak{R}
+1d516=\\mathfrak{S}
+1d517=\\mathfrak{T}
+1d518=\\mathfrak{U}
+1d519=\\mathfrak{V}
+1d51a=\\mathfrak{W}
+1d51b=\\mathfrak{X}
+1d51c=\\mathfrak{Y}
+1d51d=\\mathfrak{Z}
+1d51e=\\mathfrak{a}
+1d51f=\\mathfrak{b}
+1d520=\\mathfrak{c}
+1d521=\\mathfrak{d}
+1d522=\\mathfrak{e}
+1d523=\\mathfrak{f}
+1d524=\\mathfrak{g}
+1d525=\\mathfrak{h}
+1d526=\\mathfrak{i}
+1d527=\\mathfrak{j}
+1d528=\\mathfrak{k}
+1d529=\\mathfrak{l}
+1d52a=\\mathfrak{m}
+1d52b=\\mathfrak{n}
+1d52c=\\mathfrak{o}
+1d52d=\\mathfrak{p}
+1d52e=\\mathfrak{q}
+1d52f=\\mathfrak{r}
+1d530=\\mathfrak{s}
+1d531=\\mathfrak{t}
+1d532=\\mathfrak{u}
+1d533=\\mathfrak{v}
+1d534=\\mathfrak{w}
+1d535=\\mathfrak{x}
+1d536=\\mathfrak{y}
+1d537=\\mathfrak{z}
+1d538=\\mathbb{A}
+1d539=\\mathbb{B}
+1d53a=\\mathbb{C}
+1d53b=\\mathbb{D}
+1d53c=\\mathbb{E}
+1d53d=\\mathbb{F}
+1d53e=\\mathbb{G}
+1d53f=\\mathbb{H}
+1d540=\\mathbb{I}
+1d541=\\mathbb{J}
+1d542=\\mathbb{K}
+1d543=\\mathbb{L}
+1d544=\\mathbb{M}
+1d545=\\mathbb{N}
+1d546=\\mathbb{O}
+1d547=\\mathbb{P}
+1d548=\\mathbb{Q}
+1d549=\\mathbb{R}
+1d54a=\\mathbb{S}
+1d54b=\\mathbb{T}
+1d54c=\\mathbb{U}
+1d54d=\\mathbb{V}
+1d54e=\\mathbb{W}
+1d54f=\\mathbb{X}
+1d550=\\mathbb{Y}
+1d551=\\mathbb{Z}
+1d552=\\mathbb{a}
+1d553=\\mathbb{b}
+1d554=\\mathbb{c}
+1d555=\\mathbb{d}
+1d556=\\mathbb{e}
+1d557=\\mathbb{f}
+1d558=\\mathbb{g}
+1d559=\\mathbb{h}
+1d55a=\\mathbb{i}
+1d55b=\\mathbb{j}
+1d55c=\\mathbb{k}
+1d55d=\\mathbb{l}
+1d55e=\\mathbb{m}
+1d55f=\\mathbb{n}
+1d560=\\mathbb{o}
+1d561=\\mathbb{p}
+1d562=\\mathbb{q}
+1d563=\\mathbb{r}
+1d564=\\mathbb{s}
+1d565=\\mathbb{t}
+1d566=\\mathbb{u}
+1d567=\\mathbb{v}
+1d568=\\mathbb{w}
+1d569=\\mathbb{x}
+1d56a=\\mathbb{y}
+1d56b=\\mathbb{z}
